# LogBook

./: .gitignore  README.md  pyproject.toml  requirements.txt
logbook/: .tui.py.swp  __main__.py  database.py  logbook.tcss  tui.py
